Italicize the questions (not assumptions) in the prompts.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -42,9 +42,9 @@
     "\n",
     "An investor whose initial wealth is $\\$1000$ is offered an opportunity to play a fair game with 2 possible outcomes: winning $\\$350$ with a probability of $1/3$ or losing $\\$150$ with a probability of $2/3$. The investor utility function is the natural logarithm of his wealth, $u(W) = \\ln(W)$.\n",
     "\n",
-    "- What is the Certainty Equivalent of this risky game?\n",
-    "- What is the exact Risk Premium of this risky game?\n",
-    "- How good is the approximation obtained by using a Taylor series expansion?"
+    "- *What is the Certainty Equivalent of this risky game?*\n",
+    "- *What is the exact Risk Premium of this risky game?*\n",
+    "- *How good is the approximation obtained by using a Taylor series expansion?*"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "source": [
     "b. **Sensitivity to Initial Wealth** (5 pts)\n",
     "\n",
-    "Assume that the initial wealth is $\\$2000$. What is the risk premium now?"
+    "Assume that the initial wealth is $\\$2000$. *What is the risk premium now?*"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "source": [
     "c. **Sensitivity to Volatility** (5 pts)\n",
     "\n",
-    "Assume that the initial wealth is $\\$1000$ and the outcomes are winning $\\$300$ with a probability of $1/2$ or losing $\\$300$ with a probability of $1/2$. What is the risk premium now?"
+    "Assume that the initial wealth is $\\$1000$ and the outcomes are winning $\\$300$ with a probability of $1/2$ or losing $\\$300$ with a probability of $1/2$. *What is the risk premium now?*"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "source": [
     "a. **Absolute Risk Aversion & Risk Attitude** (10 pts)\n",
     "\n",
-    "Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer."
+    "*Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer.*"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "source": [
     "b. $\\boldsymbol{k = 1/2}$ (10 pts)\n",
     "\n",
-    "Assume that $k = 1/2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?"
+    "*Assume that $k = 1/2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?*"
    ]
   },
   {
@@ -546,7 +546,7 @@
    "source": [
     "c. $\\boldsymbol{k = 2}$ (10 pts)\n",
     "\n",
-    "Assume that $k = 2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?"
+    "*Assume that $k = 2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?*"
    ]
   },
   {
@@ -620,7 +620,7 @@
    "source": [
     "a. **Risk Aversion** (10 pts)\n",
     "\n",
-    "Prove that an investor with utility function $U(r_p) = -e^{-\\lambda r_p}$ for $\\lambda > 0$ is risk-averse."
+    "*Prove that an investor with utility function $U(r_p) = -e^{-\\lambda r_p}$ for $\\lambda > 0$ is risk-averse.*"
    ]
   },
   {
@@ -656,8 +656,8 @@
    "source": [
     "b. **Equivalent Quadratic Problem** (10 pts)\n",
     "\n",
-    "- Provide the expressions of $\\mu_p(\\omega)$, the Expected return of the portfolio as a function of $\\mu$. Provide the expression of $\\sigma_p(\\omega)^2$, the variance of the portfolio as a function of $\\Sigma$. (5 pts)\n",
-    "- Now we assume that the distribution of $r$, random return of the securities, is Gaussian. Prove that maximizing the expected utility $E[U(r_P(\\omega))]$ is equivalent to a linear quadratic minimization of an objective function depending solely on $\\mu, \\Sigma$, and $\\omega$. (5 pts)"
+    "- *Provide the expressions of $\\mu_p(\\omega)$, the Expected return of the portfolio as a function of $\\mu$. Provide the expression of $\\sigma_p(\\omega)^2$, the variance of the portfolio as a function of $\\Sigma$.* (5 pts)\n",
+    "- Now we assume that the distribution of $r$, random return of the securities, is Gaussian. *Prove that maximizing the expected utility $E[U(r_P(\\omega))]$ is equivalent to a linear quadratic minimization of an objective function depending solely on $\\mu, \\Sigma$, and $\\omega$.* (5 pts)"
    ]
   },
   {
@@ -737,7 +737,7 @@
    "source": [
     "a. **Stock Closing Prices**\n",
     "\n",
-    "Download daily closing prices for the common stocks of Apple, Google, Facebook and Amazon from January 1st, 2022 to December 30th, 2023."
+    "*Download daily closing prices for the common stocks of Apple, Google, Facebook and Amazon from January 1st, 2022 to December 30th, 2023.*"
    ]
   },
   {
@@ -797,7 +797,7 @@
    "source": [
     "b. **Expected Returns Vector & Covariance Matrix**\n",
     "\n",
-    "Use the entire data to compute the Expected Returns Vector and Covariance matrix."
+    "*Use the entire data to compute the Expected Returns Vector and Covariance matrix.*"
    ]
   },
   {
@@ -849,7 +849,7 @@
    "source": [
     "c. **Sequence Creation**\n",
     "\n",
-    "Create a sequence $\\Lambda = \\{\\lambda_0, \\lambda_1, \\dots, \\lambda_n\\}$ containing numbers from 0.01 to 100 in steps of 0.1."
+    "*Create a sequence $\\Lambda = \\{\\lambda_0, \\lambda_1, \\dots, \\lambda_n\\}$ containing numbers from 0.01 to 100 in steps of 0.1.*"
    ]
   },
   {
@@ -883,7 +883,7 @@
    "source": [
     "d. **Optimal Portfolio**\n",
     " \n",
-    "Run through a loop for each value in $\\lambda_{i} \\in \\Lambda$ to:\n",
+    "*Run through a loop for each value in $\\lambda_{i} \\in \\Lambda$ to:*\n",
     "- Using a numerical solver in R, Matlab or Python, find the optimal portfolio corresponding to Item 3-(c) with the computed $\\rho, \\Sigma$ and $\\lambda_i$ selected from $\\Lambda$.\n",
     "- Compute the optimal portfolio’s expected return and standard deviation of return.\n",
     "- Store the optimal’s portfolio return and standard deviation.\n",
@@ -1033,7 +1033,7 @@
    "source": [
     "a. **Portfolio Variance**\n",
     "\n",
-    "Give the expression of the Portfolio’s variance $\\sigma^2_P(n)$ as a function of $\\Sigma$ and $n$."
+    "*Give the expression of the Portfolio’s variance $\\sigma^2_P(n)$ as a function of $\\Sigma$ and $n$.*"
    ]
   },
   {
@@ -1063,7 +1063,7 @@
    "source": [
     "b. **Variance Convergence**\n",
     "\n",
-    "Prove that when goes to infinity, the variance of the Equally Weighted Portfolio’s variance $\\sigma^2_P(n)$ converges to the average covariance between all securities’ returns."
+    "*Prove that when goes to infinity, the variance of the Equally Weighted Portfolio’s variance $\\sigma^2_P(n)$ converges to the average covariance between all securities’ returns.*"
    ]
   },
   {
@@ -1110,7 +1110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We assume that $n = 2$ and denote by and denote by $\\rho$ the **covariance** between $r_1$ and $r_2$. Analyze the Portfolio’s Risk $\\sigma_P$ and Expected Return $\\mu_p = E(r_p)$, and provide their analytical expressions as a function of $\\rho$. Write a computer program in Python or R to plot the efficient frontier (graph of $\\mu_p$ [y-axis] as a function $\\sigma_P$ [x-axis]) in three following scenarios:"
+    "We assume that $n = 2$ and denote by and denote by $\\rho$ the **covariance** between $r_1$ and $r_2$. *Analyze the Portfolio’s Risk $\\sigma_P$ and Expected Return $\\mu_p = E(r_p)$, and provide their analytical expressions as a function of $\\rho$.* *Write a computer program in Python or R to plot the efficient frontier (graph of $\\mu_p$ [y-axis] as a function $\\sigma_P$ [x-axis]) in three following scenarios:*"
    ]
   },
   {
@@ -1154,7 +1154,7 @@
    "source": [
     "a. **Perfect Correlation**\n",
     "\n",
-    "Perfect correlation: $\\rho = 1$"
+    "*Perfect correlation: $\\rho = 1$*"
    ]
   },
   {
@@ -1163,7 +1163,7 @@
    "source": [
     "b. **Perfect Anti-Correlation**\n",
     "\n",
-    "Perfect anti-correlation: $\\rho = -1$."
+    "*Perfect anti-correlation: $\\rho = -1$.*"
    ]
   },
   {
@@ -1172,7 +1172,7 @@
    "source": [
     "c. **No Correlation**\n",
     "\n",
-    "No correlation: $\\rho = 0$."
+    "*No correlation: $\\rho = 0$.*"
    ]
   },
   {
