--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,23 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "def processdata(data_dir = 'data'):\n",
+    "def processdata(data_dir: str = 'data') -> None:\n",
+    "    \"\"\"\n",
+    "    Processes stock price data to compute and save the average daily return vector and covariance matrix.\n",
+    "    \n",
+    "    This function reads stock price data from text files, each containing data for a company, then:\n",
+    "    1. Creates a price matrix with adjusted close prices,\n",
+    "    2. Calculates the daily return matrix,\n",
+    "    3. Computes the vector of average daily returns for each company,\n",
+    "    4. Computes the covariance matrix of the return matrix,\n",
+    "    5. Saves the average daily returns vector and the covariance matrix to binary files.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - data_dir (str): The directory containing the stock price files. Default is 'data'.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - None. The function saves two files: 'inputs_mu.pkl' and 'inputs_Q.pkl' with the results.\n",
+    "    \"\"\"\n",
     "    pass"
    ]
   }
