Import List from typing for type-hinting.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,13 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "from typing import List\n",
     "\n",
     "def processdata(data_dir: str = 'data') -> None:\n",
     "    \"\"\"\n",
@@ -75,7 +76,8 @@
     "    Returns:\n",
     "    - None. The function saves two files: 'inputs_mu.pkl' and 'inputs_Q.pkl' with the results.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    # List to store the adjusted close price data for each company.\n",
+    "    price_data: List[pd.Series] = []"
    ]
   }
  ],
