Write code to loop through each file in said directory.'

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -77,7 +77,19 @@
     "    - None. The function saves two files: 'inputs_mu.pkl' and 'inputs_Q.pkl' with the results.\n",
     "    \"\"\"\n",
     "    # List to store the adjusted close price data for each company.\n",
-    "    price_data: List[pd.Series] = []"
+    "    price_data: List[pd.Series] = []\n",
+    "\n",
+    "    # Loop through each file in the specified directory.\n",
+    "    for file in os.listdir(data_dir):\n",
+    "        if file.endswith('.txt'):\n",
+    "            filepath = os.path.join(data_dir, file)\n",
+    "            # Read data, assuming space-separated values without an explicit header.\n",
+    "            df = pd.read_csv(filepath, sep=' ', header=None,\n",
+    "                             names=['Date', 'Open', 'Close', 'High', 'Low', 'Volume', 'Adj Close'])\n",
+    "            # Set date as the index for easy alignment later.\n",
+    "            df.set_index('Date', inplace=True)\n",
+    "            # Append the adjusted close price series to the list.\n",
+    "            price_data.append(df['Adj Close'])"
    ]
   }
  ],
