Calculate R or return matrix.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,125 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Date\n",
-      "20130102    57.020516\n",
-      "20130103    57.263157\n",
-      "20130104    57.855200\n",
-      "20130107    58.097841\n",
-      "20130108    58.427832\n",
-      "              ...    \n",
-      "20150921    76.739998\n",
-      "20150922    75.709999\n",
-      "20150923    75.629997\n",
-      "20150924    74.690002\n",
-      "20150925    75.099998\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102     72.458451\n",
-      "20130103     72.834518\n",
-      "20130104     73.041355\n",
-      "20130107     71.574694\n",
-      "20130108     69.694366\n",
-      "               ...    \n",
-      "20150921    136.020004\n",
-      "20150922    133.990005\n",
-      "20150923    131.669998\n",
-      "20150924    129.750000\n",
-      "20150925    131.009995\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102    11.796938\n",
-      "20130103    11.728294\n",
-      "20130104    11.875388\n",
-      "20130107    11.855776\n",
-      "20130108    11.747906\n",
-      "              ...    \n",
-      "20150921    15.700000\n",
-      "20150922    15.570000\n",
-      "20150923    15.720000\n",
-      "20150924    15.550000\n",
-      "20150925    15.890000\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102    86.985691\n",
-      "20130103    87.822988\n",
-      "20130104    88.306756\n",
-      "20130107    88.576552\n",
-      "20130108    87.450855\n",
-      "              ...    \n",
-      "20150921    72.160004\n",
-      "20150922    71.680000\n",
-      "20150923    70.199997\n",
-      "20150924    65.800003\n",
-      "20150925    64.980003\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102    18.854991\n",
-      "20130103    18.956960\n",
-      "20130104    18.984769\n",
-      "20130107    18.808642\n",
-      "20130108    18.827180\n",
-      "              ...    \n",
-      "20150921    25.540001\n",
-      "20150922    25.139999\n",
-      "20150923    25.280001\n",
-      "20150924    25.410000\n",
-      "20150925    26.030001\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102     99.922199\n",
-      "20130103     99.496766\n",
-      "20130104    100.021768\n",
-      "20130107     99.342888\n",
-      "20130108     98.899354\n",
-      "               ...    \n",
-      "20150921     78.089996\n",
-      "20150922     77.250000\n",
-      "20150923     76.120003\n",
-      "20150924     76.889999\n",
-      "20150925     77.699997\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102    40.236449\n",
-      "20130103    39.727685\n",
-      "20130104    40.113643\n",
-      "20130107    40.175048\n",
-      "20130108    40.394343\n",
-      "              ...    \n",
-      "20150921    48.240002\n",
-      "20150922    48.570000\n",
-      "20150923    47.910000\n",
-      "20150924    48.029999\n",
-      "20150925    48.549999\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102     49.555106\n",
-      "20130103     49.661781\n",
-      "20130104     50.612153\n",
-      "20130107     49.429039\n",
-      "20130108     49.225385\n",
-      "               ...    \n",
-      "20150921    103.410004\n",
-      "20150922    102.489998\n",
-      "20150923    101.570000\n",
-      "20150924    100.620003\n",
-      "20150925    100.300003\n",
-      "Name: Adj Close, Length: 689, dtype: float64, Date\n",
-      "20130102    19.443705\n",
-      "20130103    19.225032\n",
-      "20130104    19.316146\n",
-      "20130107    19.252365\n",
-      "20130108    19.042804\n",
-      "              ...    \n",
-      "20150921    25.090000\n",
-      "20150922    25.110001\n",
-      "20150923    25.139999\n",
-      "20150924    24.910000\n",
-      "20150925    24.920000\n",
-      "Name: Adj Close, Length: 689, dtype: float64]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -209,7 +93,11 @@
     "\n",
     "    # Concatenate all the adjusted close prices side-by-side, aligning by date.\n",
     "    P = pd.concat(price_data, axis=1)\n",
-    "    P.sort_index(inplace=True)  # Ensure the dates are in order.\n"
+    "    P.sort_index(inplace=True)  # Ensure the dates are in order.\n",
+    "\n",
+    "    # Calculate daily returns by comparing each price with the previous day's price.\n",
+    "    R = P.pct_change().dropna()  # Drop the first row since its percentage change is undefined.\n",
+    "\n"
    ]
   }
  ],
