Calculate mu or expected daily returns matrix.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -97,6 +97,10 @@
     "\n",
     "    # Calculate daily returns by comparing each price with the previous day's price.\n",
     "    R = P.pct_change().dropna()  # Drop the first row since its percentage change is undefined.\n",
+    "\n",
+    "    # Calculate the vector of average daily returns for each company.\n",
+    "    mu = R.mean(axis=0)\n",
+    "\n",
     "\n"
    ]
   }
