Calculate Q or covariance matrix.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -101,7 +101,8 @@
     "    # Calculate the vector of average daily returns for each company.\n",
     "    mu = R.mean(axis=0)\n",
     "\n",
-    "\n"
+    "    # Calculate the covariance matrix of the daily returns.\n",
+    "    Q = R.cov()\n"
    ]
   }
  ],
