Convert vectors into binary files.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,12 @@
     "    mu = R.mean(axis=0)\n",
     "\n",
     "    # Calculate the covariance matrix of the daily returns.\n",
-    "    Q = R.cov()\n"
+    "    Q = R.cov()\n",
+    "\n",
+    "    # Save the vector of average daily returns and the covariance matrix as binary files.\n",
+    "    mu.to_pickle('inputs_mu.pkl')\n",
+    "    Q.to_pickle('inputs_Q.pkl')\n",
+    "\n"
    ]
   }
  ],
