Run code and export binary files.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,8 @@
     "    # Save the vector of average daily returns and the covariance matrix as binary files.\n",
     "    mu.to_pickle('inputs_mu.pkl')\n",
     "    Q.to_pickle('inputs_Q.pkl')\n",
-    "\n"
+    "\n",
+    "processdata()"
    ]
   }
  ],
