Add print statements to see mu and Q matrices.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -101,8 +101,12 @@
     "    # Calculate the vector of average daily returns for each company.\n",
     "    mu = R.mean(axis=0)\n",
     "\n",
+    "    print(mu)\n",
+    "\n",
     "    # Calculate the covariance matrix of the daily returns.\n",
     "    Q = R.cov()\n",
+    "\n",
+    "    print(Q)\n",
     "\n",
     "    # Save the vector of average daily returns and the covariance matrix as binary files.\n",
     "    mu.to_pickle('inputs_mu.pkl')\n",
