--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,9 +50,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adj Close    0.000225\n",
+      "Adj Close    0.000473\n",
+      "Adj Close    0.000945\n",
+      "Adj Close    0.000540\n",
+      "Adj Close   -0.000340\n",
+      "Adj Close    0.000563\n",
+      "Adj Close   -0.000295\n",
+      "Adj Close    0.000339\n",
+      "Adj Close    0.001099\n",
+      "Adj Close    0.000425\n",
+      "Adj Close    0.001033\n",
+      "Adj Close    0.001010\n",
+      "Adj Close   -0.000270\n",
+      "Adj Close    0.000669\n",
+      "Adj Close    0.000521\n",
+      "Adj Close    0.000637\n",
+      "Adj Close    0.000240\n",
+      "Adj Close    0.000290\n",
+      "Adj Close    0.000705\n",
+      "Adj Close    0.000468\n",
+      "Adj Close    0.000901\n",
+      "Adj Close    0.000491\n",
+      "Adj Close    0.000233\n",
+      "Adj Close    0.000139\n",
+      "Adj Close    0.000595\n",
+      "Adj Close    0.001255\n",
+      "Adj Close    0.000200\n",
+      "Adj Close    0.000226\n",
+      "Adj Close    0.000022\n",
+      "Adj Close   -0.000107\n",
+      "dtype: float64\n",
+      "           Adj Close  Adj Close  Adj Close  Adj Close  Adj Close  Adj Close   \n",
+      "Adj Close   0.000342   0.000079   0.000080   0.000097   0.000104   0.000069  \\\n",
+      "Adj Close   0.000079   0.000144   0.000066   0.000088   0.000062   0.000051   \n",
+      "Adj Close   0.000080   0.000066   0.000169   0.000076   0.000058   0.000056   \n",
+      "Adj Close   0.000097   0.000088   0.000076   0.000215   0.000075   0.000073   \n",
+      "Adj Close   0.000104   0.000062   0.000058   0.000075   0.000166   0.000059   \n",
+      "Adj Close   0.000069   0.000051   0.000056   0.000073   0.000059   0.000190   \n",
+      "Adj Close   0.000100   0.000056   0.000050   0.000074   0.000077   0.000054   \n",
+      "Adj Close   0.000084   0.000060   0.000058   0.000073   0.000061   0.000058   \n",
+      "Adj Close   0.000075   0.000071   0.000066   0.000080   0.000055   0.000059   \n",
+      "Adj Close   0.000076   0.000063   0.000062   0.000074   0.000077   0.000062   \n",
+      "Adj Close   0.000058   0.000062   0.000057   0.000069   0.000050   0.000047   \n",
+      "Adj Close   0.000103   0.000057   0.000066   0.000079   0.000076   0.000088   \n",
+      "Adj Close   0.000064   0.000041   0.000050   0.000059   0.000053   0.000065   \n",
+      "Adj Close   0.000088   0.000063   0.000059   0.000069   0.000068   0.000076   \n",
+      "Adj Close   0.000047   0.000057   0.000053   0.000051   0.000045   0.000045   \n",
+      "Adj Close   0.000083   0.000083   0.000071   0.000136   0.000072   0.000071   \n",
+      "Adj Close   0.000039   0.000044   0.000037   0.000038   0.000027   0.000035   \n",
+      "Adj Close   0.000046   0.000041   0.000043   0.000044   0.000041   0.000039   \n",
+      "Adj Close   0.000076   0.000065   0.000066   0.000070   0.000064   0.000061   \n",
+      "Adj Close   0.000046   0.000053   0.000047   0.000048   0.000044   0.000052   \n",
+      "Adj Close   0.000076   0.000063   0.000056   0.000071   0.000071   0.000077   \n",
+      "Adj Close   0.000055   0.000055   0.000046   0.000055   0.000043   0.000048   \n",
+      "Adj Close   0.000037   0.000043   0.000037   0.000039   0.000030   0.000039   \n",
+      "Adj Close   0.000052   0.000043   0.000034   0.000040   0.000043   0.000040   \n",
+      "Adj Close   0.000054   0.000055   0.000049   0.000069   0.000047   0.000045   \n",
+      "Adj Close   0.000072   0.000052   0.000062   0.000079   0.000053   0.000058   \n",
+      "Adj Close   0.000073   0.000068   0.000078   0.000072   0.000068   0.000059   \n",
+      "Adj Close   0.000050   0.000052   0.000041   0.000040   0.000040   0.000034   \n",
+      "Adj Close   0.000044   0.000041   0.000039   0.000041   0.000031   0.000034   \n",
+      "Adj Close   0.000089   0.000053   0.000049   0.000066   0.000072   0.000051   \n",
+      "\n",
+      "           Adj Close  Adj Close  Adj Close  Adj Close  ...  Adj Close   \n",
+      "Adj Close   0.000100   0.000084   0.000075   0.000076  ...   0.000076  \\\n",
+      "Adj Close   0.000056   0.000060   0.000071   0.000063  ...   0.000063   \n",
+      "Adj Close   0.000050   0.000058   0.000066   0.000062  ...   0.000056   \n",
+      "Adj Close   0.000074   0.000073   0.000080   0.000074  ...   0.000071   \n",
+      "Adj Close   0.000077   0.000061   0.000055   0.000077  ...   0.000071   \n",
+      "Adj Close   0.000054   0.000058   0.000059   0.000062  ...   0.000077   \n",
+      "Adj Close   0.000141   0.000060   0.000053   0.000068  ...   0.000062   \n",
+      "Adj Close   0.000060   0.000132   0.000064   0.000062  ...   0.000065   \n",
+      "Adj Close   0.000053   0.000064   0.000148   0.000058  ...   0.000067   \n",
+      "Adj Close   0.000068   0.000062   0.000058   0.000130  ...   0.000057   \n",
+      "Adj Close   0.000049   0.000053   0.000066   0.000052  ...   0.000061   \n",
+      "Adj Close   0.000068   0.000065   0.000049   0.000060  ...   0.000082   \n",
+      "Adj Close   0.000053   0.000052   0.000050   0.000061  ...   0.000068   \n",
+      "Adj Close   0.000061   0.000057   0.000060   0.000063  ...   0.000098   \n",
+      "Adj Close   0.000047   0.000050   0.000052   0.000052  ...   0.000049   \n",
+      "Adj Close   0.000075   0.000071   0.000073   0.000074  ...   0.000077   \n",
+      "Adj Close   0.000037   0.000036   0.000044   0.000038  ...   0.000040   \n",
+      "Adj Close   0.000037   0.000038   0.000044   0.000047  ...   0.000048   \n",
+      "Adj Close   0.000056   0.000059   0.000061   0.000066  ...   0.000059   \n",
+      "Adj Close   0.000052   0.000048   0.000046   0.000045  ...   0.000051   \n",
+      "Adj Close   0.000062   0.000065   0.000067   0.000057  ...   0.000228   \n",
+      "Adj Close   0.000050   0.000048   0.000058   0.000058  ...   0.000048   \n",
+      "Adj Close   0.000043   0.000036   0.000045   0.000042  ...   0.000044   \n",
+      "Adj Close   0.000038   0.000038   0.000043   0.000043  ...   0.000046   \n",
+      "Adj Close   0.000049   0.000053   0.000059   0.000054  ...   0.000051   \n",
+      "Adj Close   0.000059   0.000053   0.000063   0.000060  ...   0.000061   \n",
+      "Adj Close   0.000057   0.000059   0.000068   0.000066  ...   0.000057   \n",
+      "Adj Close   0.000039   0.000044   0.000044   0.000044  ...   0.000052   \n",
+      "Adj Close   0.000030   0.000038   0.000042   0.000037  ...   0.000046   \n",
+      "Adj Close   0.000101   0.000059   0.000054   0.000064  ...   0.000057   \n",
+      "\n",
+      "           Adj Close  Adj Close  Adj Close  Adj Close  Adj Close  Adj Close   \n",
+      "Adj Close   0.000055   0.000037   0.000052   0.000054   0.000072   0.000073  \\\n",
+      "Adj Close   0.000055   0.000043   0.000043   0.000055   0.000052   0.000068   \n",
+      "Adj Close   0.000046   0.000037   0.000034   0.000049   0.000062   0.000078   \n",
+      "Adj Close   0.000055   0.000039   0.000040   0.000069   0.000079   0.000072   \n",
+      "Adj Close   0.000043   0.000030   0.000043   0.000047   0.000053   0.000068   \n",
+      "Adj Close   0.000048   0.000039   0.000040   0.000045   0.000058   0.000059   \n",
+      "Adj Close   0.000050   0.000043   0.000038   0.000049   0.000059   0.000057   \n",
+      "Adj Close   0.000048   0.000036   0.000038   0.000053   0.000053   0.000059   \n",
+      "Adj Close   0.000058   0.000045   0.000043   0.000059   0.000063   0.000068   \n",
+      "Adj Close   0.000058   0.000042   0.000043   0.000054   0.000060   0.000066   \n",
+      "Adj Close   0.000053   0.000041   0.000038   0.000050   0.000057   0.000056   \n",
+      "Adj Close   0.000043   0.000029   0.000039   0.000047   0.000056   0.000057   \n",
+      "Adj Close   0.000041   0.000036   0.000041   0.000047   0.000062   0.000060   \n",
+      "Adj Close   0.000056   0.000039   0.000045   0.000044   0.000049   0.000055   \n",
+      "Adj Close   0.000057   0.000045   0.000038   0.000046   0.000059   0.000054   \n",
+      "Adj Close   0.000063   0.000044   0.000049   0.000067   0.000075   0.000070   \n",
+      "Adj Close   0.000039   0.000046   0.000033   0.000039   0.000036   0.000039   \n",
+      "Adj Close   0.000037   0.000034   0.000031   0.000039   0.000040   0.000036   \n",
+      "Adj Close   0.000050   0.000043   0.000039   0.000053   0.000058   0.000067   \n",
+      "Adj Close   0.000065   0.000041   0.000039   0.000041   0.000052   0.000047   \n",
+      "Adj Close   0.000048   0.000044   0.000046   0.000051   0.000061   0.000057   \n",
+      "Adj Close   0.000110   0.000044   0.000039   0.000047   0.000059   0.000050   \n",
+      "Adj Close   0.000044   0.000085   0.000038   0.000044   0.000042   0.000040   \n",
+      "Adj Close   0.000039   0.000038   0.000088   0.000036   0.000035   0.000041   \n",
+      "Adj Close   0.000047   0.000044   0.000036   0.000086   0.000053   0.000054   \n",
+      "Adj Close   0.000059   0.000042   0.000035   0.000053   0.000179   0.000064   \n",
+      "Adj Close   0.000050   0.000040   0.000041   0.000054   0.000064   0.000110   \n",
+      "Adj Close   0.000042   0.000037   0.000065   0.000036   0.000030   0.000043   \n",
+      "Adj Close   0.000038   0.000043   0.000035   0.000041   0.000045   0.000037   \n",
+      "Adj Close   0.000048   0.000042   0.000041   0.000047   0.000056   0.000055   \n",
+      "\n",
+      "           Adj Close  Adj Close  Adj Close  \n",
+      "Adj Close   0.000050   0.000044   0.000089  \n",
+      "Adj Close   0.000052   0.000041   0.000053  \n",
+      "Adj Close   0.000041   0.000039   0.000049  \n",
+      "Adj Close   0.000040   0.000041   0.000066  \n",
+      "Adj Close   0.000040   0.000031   0.000072  \n",
+      "Adj Close   0.000034   0.000034   0.000051  \n",
+      "Adj Close   0.000039   0.000030   0.000101  \n",
+      "Adj Close   0.000044   0.000038   0.000059  \n",
+      "Adj Close   0.000044   0.000042   0.000054  \n",
+      "Adj Close   0.000044   0.000037   0.000064  \n",
+      "Adj Close   0.000040   0.000048   0.000051  \n",
+      "Adj Close   0.000042   0.000034   0.000060  \n",
+      "Adj Close   0.000040   0.000034   0.000052  \n",
+      "Adj Close   0.000046   0.000035   0.000060  \n",
+      "Adj Close   0.000041   0.000041   0.000047  \n",
+      "Adj Close   0.000050   0.000044   0.000070  \n",
+      "Adj Close   0.000035   0.000036   0.000035  \n",
+      "Adj Close   0.000032   0.000033   0.000038  \n",
+      "Adj Close   0.000041   0.000038   0.000058  \n",
+      "Adj Close   0.000043   0.000036   0.000047  \n",
+      "Adj Close   0.000052   0.000046   0.000057  \n",
+      "Adj Close   0.000042   0.000038   0.000048  \n",
+      "Adj Close   0.000037   0.000043   0.000042  \n",
+      "Adj Close   0.000065   0.000035   0.000041  \n",
+      "Adj Close   0.000036   0.000041   0.000047  \n",
+      "Adj Close   0.000030   0.000045   0.000056  \n",
+      "Adj Close   0.000043   0.000037   0.000055  \n",
+      "Adj Close   0.000100   0.000034   0.000040  \n",
+      "Adj Close   0.000034   0.000084   0.000032  \n",
+      "Adj Close   0.000040   0.000032   0.000112  \n",
+      "\n",
+      "[30 rows x 30 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
