Import cvxpy for convex/quadratic optimization.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -297,6 +297,15 @@
     "\n",
     "- Take the set of input parameters $\\texttt{mu}$ (mean vector $\\mu$), $\\texttt{Q}$ (covariance matrix $Q$), and $\\texttt{tau}$ (risk tolerance $\\tau$), and return vector $h$ that maximizes the following utility function $U$ defined by: $$U(h) = -\\frac{1}{2}h^T Q h + \\tau h^T \\mu$$ subject to the constraints $$0 \\leq h_i \\leq 0.1 \\; \\text{for all} \\; i, \\; \\text{and}$$ $$\\sum_{i=1}^n h_i = h^T e = 1$$ where $n$ is the number of securities in the portfolio."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cvxpy as cp\n"
+   ]
   }
  ],
  "metadata": {
