Define port() method.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -300,11 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cvxpy as cp\n"
+    "import cvxpy as cp\n",
+    "\n",
+    "def port(mu, Q):\n",
+    "    pass"
    ]
   }
  ],
