Add type-hinting and doc-strings to port() method.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -300,13 +300,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cvxpy as cp\n",
     "\n",
-    "def port(mu, Q):\n",
+    "def port(mu: np.ndarray, Q: np.ndarray, tau: float) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Solves the portfolio optimization problem to maximize the utility function\n",
+    "    under given constraints using quadratic programming.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - mu (np.ndarray): The mean return vector for the securities.\n",
+    "    - Q (np.ndarray): The covariance matrix of the securities' returns.\n",
+    "    - tau (float): The risk tolerance parameter of the utility function.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - h (np.ndarray): The optimized portfolio weights vector.\n",
+    "    \"\"\"\n",
     "    pass"
    ]
   }
