Define and initialize variables.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -319,7 +319,12 @@
     "    Returns:\n",
     "    - h (np.ndarray): The optimized portfolio weights vector.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    \n",
+    "    # Number of securities\n",
+    "    n = mu.shape[0]\n",
+    "    \n",
+    "    # Portfolio weights variable\n",
+    "    h = cp.Variable(n)\n"
    ]
   }
  ],
