--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,10 @@
     "    n = mu.shape[0]\n",
     "    \n",
     "    # Portfolio weights variable\n",
-    "    h = cp.Variable(n)\n"
+    "    h = cp.Variable(n)\n",
+    "\n",
+    "    # Define utility function to maximize.\n",
+    "    utility = -0.5 * cp.quad_form(h, Q) + tau * cp.matmul(h.T, mu)"
    ]
   }
  ],
