--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -327,7 +327,10 @@
     "    h = cp.Variable(n)\n",
     "\n",
     "    # Define utility function to maximize.\n",
-    "    utility = -0.5 * cp.quad_form(h, Q) + tau * cp.matmul(h.T, mu)"
+    "    utility = -0.5 * cp.quad_form(h, Q) + tau * cp.matmul(h.T, mu)\n",
+    "\n",
+    "    # Constraints: 0 <= h_i <= 0.1 for all i, and sum(h_i) == 1\n",
+    "    constraints = [0 <= h, h <= 0.1, cp.sum(h) == 1]"
    ]
   }
  ],
