Solve problem and complete port() method.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -330,7 +330,16 @@
     "    utility = -0.5 * cp.quad_form(h, Q) + tau * cp.matmul(h.T, mu)\n",
     "\n",
     "    # Constraints: 0 <= h_i <= 0.1 for all i, and sum(h_i) == 1\n",
-    "    constraints = [0 <= h, h <= 0.1, cp.sum(h) == 1]"
+    "    constraints = [0 <= h, h <= 0.1, cp.sum(h) == 1]\n",
+    "\n",
+    "    # Problem definition\n",
+    "    problem = cp.Problem(cp.Maximize(utility), constraints)\n",
+    "    \n",
+    "    # Solve the problem.\n",
+    "    problem.solve()\n",
+    "    \n",
+    "    # Return the optimized portfolio weights.\n",
+    "    return h.value"
    ]
   }
  ],
