Solve and finish Q2.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,14 +323,22 @@
     "    # Number of securities\n",
     "    n = mu.shape[0]\n",
     "    \n",
+    "    print(n)\n",
+    "    \n",
     "    # Portfolio weights variable\n",
     "    h = cp.Variable(n)\n",
+    "\n",
+    "    print(h)\n",
     "\n",
     "    # Define utility function to maximize.\n",
     "    utility = -0.5 * cp.quad_form(h, Q) + tau * cp.matmul(h.T, mu)\n",
     "\n",
+    "    print(utility)\n",
+    "\n",
     "    # Constraints: 0 <= h_i <= 0.1 for all i, and sum(h_i) == 1\n",
     "    constraints = [0 <= h, h <= 0.1, cp.sum(h) == 1]\n",
+    "\n",
+    "    print(constraints)\n",
     "\n",
     "    # Problem definition\n",
     "    problem = cp.Problem(cp.Maximize(utility), constraints)\n",
