--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -349,6 +349,28 @@
     "    # Return the optimized portfolio weights.\n",
     "    return h.value"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Question 3. (15 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program called $\\texttt{frontier}$ that will:\n",
+    "\n",
+    "1. Load in your programming environment the data stored in the $\\texttt{inputs.ext}$;\n",
+    "2. Create a sequence $\\texttt{TAU}$ containing numbers from zero to 0.5 in steps of 0.001;\n",
+    "3. Run through a loop for each value of your $\\texttt{TAU}$ sequence to\n",
+    "- Find the optimum portfolio with the given $\\texttt{mu, Q}$ and $\\texttt{tau}$ selected from $\\texttt{TAU}$;\n",
+    "- Compute the optimum portfolio’s expected return and standard deviation of return;\n",
+    "- Store the portfolio return and standard deviation.\n",
+    "4. After completing the loop, plot the efficient frontier."
+   ]
   }
  ],
  "metadata": {
