Import matplotlib as well as define the frontier() method.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -366,10 +366,22 @@
     "1. Load in your programming environment the data stored in the $\\texttt{inputs.ext}$;\n",
     "2. Create a sequence $\\texttt{TAU}$ containing numbers from zero to 0.5 in steps of 0.001;\n",
     "3. Run through a loop for each value of your $\\texttt{TAU}$ sequence to\n",
-    "- Find the optimum portfolio with the given $\\texttt{mu, Q}$ and $\\texttt{tau}$ selected from $\\texttt{TAU}$;\n",
+    "- Find the optimum portfolio with the given $\\texttt{m}$, $\\texttt{Q}$, and $\\texttt{tau}$ selected from $\\texttt{TAU}$;\n",
     "- Compute the optimum portfolio’s expected return and standard deviation of return;\n",
     "- Store the portfolio return and standard deviation.\n",
     "4. After completing the loop, plot the efficient frontier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def frontier():\n",
+    "    pass"
    ]
   }
  ],
