--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,22 +323,22 @@
     "    # Number of securities\n",
     "    n = mu.shape[0]\n",
     "    \n",
-    "    print(n)\n",
+    "    ## print(n)\n",
     "    \n",
     "    # Portfolio weights variable\n",
     "    h = cp.Variable(n)\n",
     "\n",
-    "    print(h)\n",
+    "    ## print(h)\n",
     "\n",
     "    # Define utility function to maximize.\n",
     "    utility = -0.5 * cp.quad_form(h, Q) + tau * cp.matmul(h.T, mu)\n",
     "\n",
-    "    print(utility)\n",
+    "    ## print(utility)\n",
     "\n",
     "    # Constraints: 0 <= h_i <= 0.1 for all i, and sum(h_i) == 1\n",
     "    constraints = [0 <= h, h <= 0.1, cp.sum(h) == 1]\n",
     "\n",
-    "    print(constraints)\n",
+    "    ## print(constraints)\n",
     "\n",
     "    # Problem definition\n",
     "    problem = cp.Problem(cp.Maximize(utility), constraints)\n",
@@ -374,11 +374,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def compute_metrics(mu: np.ndarray, Q: np.ndarray, h: np.ndarray) -> (float, float):\n",
+    "    \"\"\"\n",
+    "    Computes the expected return and standard deviation of the portfolio.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - mu (np.ndarray): The mean return vector for the securities.\n",
+    "    - Q (np.ndarray): The covariance matrix of the securities' returns.\n",
+    "    - h (np.ndarray): The portfolio weights.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - tuple: A tuple containing the expected return and standard deviation of the portfolio.\n",
+    "    \"\"\"\n",
+    "    expected_return = np.dot(mu.T, h)\n",
+    "    std_dev = np.sqrt(np.dot(h.T, np.dot(Q, h)))\n",
+    "    return expected_return, std_dev\n",
     "\n",
     "def frontier():\n",
     "    pass"
