Create load_inputs() helper method to load in .pkl (binary) files for mu and Q matrices.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -374,13 +374,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def compute_metrics(mu: np.ndarray, Q: np.ndarray, h: np.ndarray) -> (float, float):\n",
+    "def load_inputs(mu_path: str = 'inputs_mu.pkl', Q_path: str = 'inputs_Q.pkl') -> (np.ndarray, np.ndarray): # type: ignore\n",
+    "    \"\"\"\n",
+    "    Loads the mean returns vector and covariance matrix from the specified files.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - mu_path (str): Path to the file containing the mean returns vector.\n",
+    "    - Q_path (str): Path to the file containing the covariance matrix.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - tuple: A tuple containing the mean returns vector and the covariance matrix.\n",
+    "    \"\"\"\n",
+    "    mu = pd.read_pickle(mu_path).values\n",
+    "    Q = pd.read_pickle(Q_path).values\n",
+    "    return mu, Q\n",
+    "\n",
+    "def compute_metrics(mu: np.ndarray, Q: np.ndarray, h: np.ndarray) -> (float, float): # type: ignore\n",
     "    \"\"\"\n",
     "    Computes the expected return and standard deviation of the portfolio.\n",
     "    \n",
@@ -394,10 +409,7 @@
     "    \"\"\"\n",
     "    expected_return = np.dot(mu.T, h)\n",
     "    std_dev = np.sqrt(np.dot(h.T, np.dot(Q, h)))\n",
-    "    return expected_return, std_dev\n",
-    "\n",
-    "def frontier():\n",
-    "    pass"
+    "    return expected_return, std_dev    "
    ]
   }
  ],
