Write frontier() method that computes Efficient Frontier.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,36 @@
     "    \"\"\"\n",
     "    expected_return = np.dot(mu.T, h)\n",
     "    std_dev = np.sqrt(np.dot(h.T, np.dot(Q, h)))\n",
-    "    return expected_return, std_dev    "
+    "    return expected_return, std_dev    \n",
+    "\n",
+    "def frontier():\n",
+    "    \"\"\"\n",
+    "    Plots the efficient frontier by optimizing portfolios over a range of risk tolerance values using the `port` function.\n",
+    "    Loads mean returns vector and covariance matrix, then calculates and plots the efficient frontier.\n",
+    "    \"\"\"\n",
+    "    # Load the mean returns vector and covariance matrix from saved files\n",
+    "    mu, Q = load_inputs()\n",
+    "    TAU = np.arange(0, 0.501, 0.001)  # Range of risk tolerance values\n",
+    "    returns = []  # List to store expected returns of optimized portfolios\n",
+    "    std_devs = []  # List to store standard deviations of optimized portfolios\n",
+    "\n",
+    "    for tau in TAU:\n",
+    "        # Use the previously defined port() function for portfolio optimization\n",
+    "        h_opt = port(mu, Q, tau)\n",
+    "        # Compute expected return and standard deviation for the optimized portfolio\n",
+    "        ret, std = compute_metrics(mu, Q, h_opt)\n",
+    "        # Store the results\n",
+    "        returns.append(ret)\n",
+    "        std_devs.append(std)\n",
+    "\n",
+    "    # Plotting the efficient frontier\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(std_devs, returns, 'o-', markersize=4)\n",
+    "    plt.title('Efficient Frontier')\n",
+    "    plt.xlabel('Standard Deviation of Portfolio Return')\n",
+    "    plt.ylabel('Expected Portfolio Return')\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
    ]
   }
  ],
