Write data disclaimer for Q4, Q5, & Q6.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -459,6 +459,13 @@
    ],
    "source": [
     "frontier()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The supplied $\\texttt{Midtermdata.zip}$ file contains an $\\bf{R}$ data file $\\texttt{data.rda}$ and a tab-delimited text file $\\texttt{data.tsv}$ containing the Dow-Jones Industrial Index and the closing prices for the 30 companies in that index for 250 trading days. **You will use that data for questions 4, 5 and 6.**"
    ]
   }
  ],
