--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -467,6 +467,28 @@
    "source": [
     "The supplied $\\texttt{Midtermdata.zip}$ file contains an $\\bf{R}$ data file $\\texttt{data.rda}$ and a tab-delimited text file $\\texttt{data.tsv}$ containing the Dow-Jones Industrial Index and the closing prices for the 30 companies in that index for 250 trading days. **You will use that data for questions 4, 5 and 6.**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Question 4. (15 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program to:\n",
+    "1. read in this Dow-Jones data,\n",
+    "2. convert the matrix of daily prices to daily simple returns (not logarithmic returns),\n",
+    "3. annualize the returns by multiplying them by 252 (the typical number of trading days in a year),\n",
+    "4. move the index column out of the matrix and into a separate vector,\n",
+    "5. compute a covariance matrix $\\texttt{Qts}$ based on the time-series of returns, and\n",
+    "6. print out the first five rows and five columns of the covariance matrix.\n",
+    "\n",
+    "Clearly describe all steps in your program with comments. List your program in your answer document. No points will be awarded unless the steps associated with each part of the question are clearly distinguished. Also, submit the source code file."
+   ]
   }
  ],
  "metadata": {
