Write method read_data() for Q4 Step 1.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -489,6 +489,27 @@
     "\n",
     "Clearly describe all steps in your program with comments. List your program in your answer document. No points will be awarded unless the steps associated with each part of the question are clearly distinguished. Also, submit the source code file."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data(file_path: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Reads the data from a tab-delimited text file into a pandas DataFrame.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - file_path (str): The path to the data file.\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: A DataFrame with the Dow-Jones data.\n",
+    "    \"\"\"\n",
+    "    # Read in the tab-delimited text file.\n",
+    "    data = pd.read_csv(file_path, delimiter='\\t')\n",
+    "    return data"
+   ]
   }
  ],
  "metadata": {
