--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,6 +509,27 @@
     "    # Read in the tab-delimited text file.\n",
     "    data = pd.read_csv(file_path, delimiter='\\t')\n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_simple_returns(prices: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Converts a matrix of daily prices to daily simple returns.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - prices (pd.DataFrame): A DataFrame with daily prices.\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: A DataFrame with daily simple returns.\n",
+    "    \"\"\"\n",
+    "    # Calculate daily simple returns.\n",
+    "    returns = prices.pct_change().dropna()  # Drop the first row as the return for the first day is not defined\n",
+    "    return returns"
    ]
   }
  ],
