Write method annualize_returns() for S3 of Q4.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -531,6 +531,27 @@
     "    returns = prices.pct_change().dropna()  # Drop the first row as the return for the first day is not defined\n",
     "    return returns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def annualize_returns(returns: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Annualizes the daily simple returns.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - returns (pd.DataFrame): A DataFrame with daily simple returns.\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: A DataFrame with annualized returns.\n",
+    "    \"\"\"\n",
+    "    # Multiply by the number of trading days to annualize.\n",
+    "    annual_returns = returns * 252\n",
+    "    return annual_returns"
+   ]
   }
  ],
  "metadata": {
