Add extract_index() method for S4.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -573,6 +573,37 @@
     "    annual_returns = returns * 252\n",
     "    return annual_returns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### *Step 4.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple\n",
+    "\n",
+    "def extract_index(data: pd.DataFrame) -> Tuple[pd.DataFrame, pd.Series]:\n",
+    "    \"\"\"\n",
+    "    Moves the index column out of the DataFrame into a separate vector.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - data (pd.DataFrame): A DataFrame with the index as one of the columns.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Tuple[pd.DataFrame, pd.Series]: A tuple of the DataFrame without the index column and the index column as a Series.\n",
+    "    \"\"\"\n",
+    "    # Assuming the index is the first column, we separate it from the data\n",
+    "    index_column = data.iloc[:, 0]\n",
+    "    data_without_index = data.iloc[:, 1:]\n",
+    "    return data_without_index, index_column"
+   ]
   }
  ],
  "metadata": {
