Write compute_cov_matrix() method for S5.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -542,7 +542,7 @@
     "    - pd.DataFrame: A DataFrame with daily simple returns.\n",
     "    \"\"\"\n",
     "    # Calculate daily simple returns.\n",
-    "    returns = prices.pct_change().dropna()  # Drop the first row as the return for the first day is not defined\n",
+    "    returns = prices.pct_change().dropna()  # Drop the first row as the return for the first day is not defined.\n",
     "    return returns"
    ]
   },
@@ -599,10 +599,38 @@
     "    Returns:\n",
     "    - Tuple[pd.DataFrame, pd.Series]: A tuple of the DataFrame without the index column and the index column as a Series.\n",
     "    \"\"\"\n",
-    "    # Assuming the index is the first column, we separate it from the data\n",
+    "    # Assuming the index is the first column, we separate it from the data.\n",
     "    index_column = data.iloc[:, 0]\n",
     "    data_without_index = data.iloc[:, 1:]\n",
     "    return data_without_index, index_column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### *Step 5.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_covariance_matrix(returns: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Computes the covariance matrix based on the time-series of returns.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - returns (pd.DataFrame): A DataFrame with annualized returns.\n",
+    "\n",
+    "    Returns:\n",
+    "    - pd.DataFrame: The covariance matrix of the returns.\n",
+    "    \"\"\"\n",
+    "    # Compute the covariance matrix.\n",
+    "    Qts = returns.cov()\n",
+    "    return Qts"
    ]
   }
  ],
